# 2026-QuEra-Technical

./: pyproject.toml
team_solutions/pauley_x/: Animations.ipynb  MSD_circ.ipynb  MSD_test.ipynb  PAULEY_X_README.md  circuits_with_bloqade_test.py  david.ipynb  error_propogation_q2Z.html  main.py  manual_noise_injection.py  noise_injection.py  pranav.ipynb  squin_to_cirq.py  syndrome_extraction_correction_basic_7color.ipynb  team_solutions.md  yvana.ipynb
team_solutions/pauley_x/bloch_outputs/: logical_bloch_equator_theta1.5708_shots2000_frames72.npz
team_solutions/pauley_x/test/: final_noise.ipynb  test.txt
